# pytorch_template

./: Makefile  pyproject.toml
dockerfiles/: Dockerfile.gpu
mypackage/models/: plt.py
scripts/: train.py
